Fixed UI bugs (divs too big, first video was skipped, ...) # commit for test purpose

--- a/app/static/index2.css
+++ b/app/static/index2.css
@@ -31,7 +31,7 @@
 }
 
 /* Explanation modal settings */
-.explanationModal {
+.explanationModal, .finalVideoModal {
   position: fixed;
   top: 40%;
   left: 50%;
